Added 2 'servers' connected by sockets

--- a/Servers_paralel/Servers_paralel.csproj
+++ b/Servers_paralel/Servers_paralel.csproj
@@ -171,6 +171,11 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\Logoff.cshtml" />
+    <Content Include="Views\Home\MakeTask.cshtml" />
+    <Content Include="Views\Home\MakeTask2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
