Added to front that it has info about tasks

--- a/Servers_paralel/Servers_paralel.csproj
+++ b/Servers_paralel/Servers_paralel.csproj
@@ -176,6 +176,7 @@
     <Content Include="Views\Home\Logoff.cshtml" />
     <Content Include="Views\Home\MakeTask.cshtml" />
     <Content Include="Views\Home\MakeTask2.cshtml" />
+    <Content Include="Views\Home\ShowTasks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
